--- a/TCC/res/values/strings.xml
+++ b/TCC/res/values/strings.xml
@@ -10,12 +10,11 @@
     <string name="from_camera">From Picture</string>
     <string name="simulation_filter">Simulation Filter</string>
     <string name="visocor_filter">Visocor Filter</string>
-    <string name="deuteranopia">Deuteranopia</string>
-    <string name="protanopia">Protanopia</string>
 
     <string-array name="filter_options">
         <item>Deuteranopia</item>
         <item>Protanopia</item>
+        <item>Tritanopia</item>
     </string-array>
 
     <!-- Bitmap Filter Activity -->
