Big commit, color picker is finally done and tested. Test coverage is almost 80% now. =D

--- a/TCC/res/values/strings.xml
+++ b/TCC/res/values/strings.xml
@@ -37,5 +37,6 @@
     <string name="blue">Blue</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
+    <string name="invalid_color">One or more of the colors are invalid. Value should be between 0 and 255, included.</string>
 
 </resources>
