--- a/TCC/res/values/strings.xml
+++ b/TCC/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="blue">Blue</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
-    <string name="invalid_color">One or more of the colors are invalid. Value should be between 0 and 255, included.</string>
+    <string name="invalid_color">Invalid value. Value should be between 0 and 255, included.</string>
+    <string name="selected_image_sample">Selected Image Sample</string>
 
 </resources>
