--- a/TCC/res/values/strings.xml
+++ b/TCC/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="visocor">Visocor</string>
     <string name="simulation">Simulation</string>
     <string name="color_highlight">Color Highlight</string>
+    <string name="settings">Settings</string>
 
     <!-- Color Picker Activity -->
     <string name="red">Red</string>
