Corrected the layout of a few activities, created the layout for the SettingsActivity and its test class

--- a/TCC/res/values/strings.xml
+++ b/TCC/res/values/strings.xml
@@ -40,4 +40,10 @@
     <string name="invalid_color">Invalid value. Value should be between 0 and 255, included.</string>
     <string name="selected_image_sample">Selected Image Sample</string>
 
+    <!-- Settings -->
+    <string name="default_visocor_intensity">Default Visocor intensity</string>
+    <string name="default_simulation_filter">Default simulation filter</string>
+    <string name="default_tolerance_values">Default tolerance values (0 to 255)</string>
+    <string name="pick_default_color">Pick default color</string>
+
 </resources>
