Orientation change bug fix in Settings Activity

--- a/TCC/res/values/strings.xml
+++ b/TCC/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="from_gallery">From Gallery</string>
     <string name="from_camera">From Picture</string>
     <string name="simulation_filter">Simulation Filter</string>
-    <string name="visocor_filter">Visocor Filter</string>
+    <string name="visocor_filter">Accessibility Filter</string>
     <string name="color_highlight_filter">Color Highlight Filter</string>
 
     <string-array name="filter_options">
@@ -26,10 +26,11 @@
     <string name="pick_color">Pick a color</string>
 
     <!-- Main Activity -->
-    <string name="visocor">Visocor</string>
+    <string name="accessibility">Acessibility</string>
     <string name="simulation">Simulation</string>
     <string name="color_highlight">Color Highlight</string>
     <string name="settings">Settings</string>
+    <string name="color_blindness_accessibility_toolkit">CAT</string>
 
     <!-- Color Picker Activity -->
     <string name="red">Red</string>
@@ -46,9 +47,5 @@
     <string name="default_tolerance_values">Default tolerance values (0 to 255)</string>
     <string name="default_color">Default color: </string>
     <string name="saved">Settings saved.</string>
-
-    <!-- Main -->
-    <string name="accessibility">Acessibility</string>
-    <string name="color_blindness_accessibility_toolkit">CAT</string>
 
 </resources>
