--- a/TCC/res/values/strings.xml
+++ b/TCC/res/values/strings.xml
@@ -48,5 +48,7 @@
     <string name="default_tolerance_values">Default tolerance values (0 to 255)</string>
     <string name="default_color">Default color: </string>
     <string name="saved">Settings saved.</string>
+    <string name="OK">OK</string>
+    <string name="error">Error</string>
 
 </resources>
